// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Batch8 — provenance integrity & scope safety > 13102: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または外国から中央区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13102-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。",
      "applicable": "applicable",
      "dueDescription": "カードに中央区の住所を追記して引き続き使用するには継続利用手続きが必要です。転入届と併せて手続きをしてください。継続利用手続きをしないまま転入した日から90日が経過するとカードは失効します。また中央区は『転入日から15日経過または転出予定日から30日経過した転入届があった場合はカードが失効し継続利用手続きができない』という注記も掲げています(中央区の転入届の届出期限は『住み始めてから14日以内』と案内されており数字が異なるため、詳細は区民生活課住民記録係へご確認ください)。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13102-my_number-001",
        "src-13102-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、中央区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13102-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金(第1号被保険者)の加入・種別変更等の届出に関する案内です。国内転入に伴う届出の要否は中央区公式ページに記載がないため、窓口または年金事務所へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "中央区の『国民年金 届出について』ページには、国内の区市町村間の転入に伴う住所変更の届出およびその期限の記載がありません(記載があるのは国外から転入した場合の資格取得の届出です)。転入に伴う届出の要否は区役所本庁舎4階保険年金課年金係または中央年金事務所へご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13102-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校生年代までの児童を養育している世帯が対象です。中央区に転入した場合は新たに認定請求が必要です。",
      "applicable": "applicable",
      "dueDescription": "児童手当は認定請求した月の翌月分から支給され、手続きが遅れた分を遡って支給することはできません。ただし出生日または転出予定日が月末に近い場合は、その翌日から起算して15日以内に請求を行うことで出生日等の翌月分から支給されます。起算日は前住所地での転出予定日のため、引越し日からは算定できません。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13102-child_benefits-001",
        "src-13102-child_benefits-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "中央区内に住所があり健康保険に加入している子どもを養育する保護者が対象です(所得による制限はありません)。申請期限は公式ページに記載がないため要確認です。",
      "applicable": "applicable",
      "dueDescription": "中央区の『子ども医療費助成』ページには、医療証の交付申請そのものの申請期限・遡及期限の記載がありません(記載があるのは償還払いの『申請期限は領収日から5年以内』のみで、これは交付申請の遡及とは別の手続きです)。申請期限は要確認です。いつまでに申請すれば転入日に遡って助成が受けられるかは中央区の公式ページから確定できないため、区役所6階子ども子育て支援課子育て給付係へご確認のうえ、早めに申請してください。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13102-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が中央区へ転入する場合に必要な、区立小・中学校への転入学手続きです。中央区で交付される書類の名称は『就学通知書』です。",
      "applicable": "applicable",
      "dueDescription": "在籍していた学校から『在学証明書』『教科書給与証明書』を受け取り、住所地の指定校へ連絡して在籍の開始日を決め、住民票の異動手続きを行ったうえで学務課へ書類を持参します(電子フォームでの手続きも可能です)。学務課から交付される『就学通知書』を入学する日までに転入学する学校へ提出してください。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13102-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、中央区の認可保育所の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "中央区は自治体経由の申込みを不要としており、原則として中央区へ直接お申し込みください。利用希望月の前月末までに転入することを条件に中央区民として利用調整が行われます。中央区の書式(入所申込書・中央区への転入誓約書・不動産の契約書の写し等)が必要です。転入届を提出したら、その日のうち午後5時までに区役所6階保育課保育入園係へお越しください。締切日は入園希望月・年度により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13102-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省データベースへの登録状況が未確認のため、届出先(中央区保健所 または 環境省の『犬と猫のマイクロチップ情報登録』サイト)が確定できません。登録状況をご確認ください(中央区はマイクロチップが鑑札とみなされる狂犬病予防法の特例制度を適用しているため、環境省データベースで所有者情報を変更すれば保健所窓口での申請は不要です)。",
      "applicable": "needs_confirmation",
      "dueDescription": "他自治体から転入した場合は、前の自治体の犬鑑札を持参して中央区保健所の窓口で手続きをしてください(鑑札を紛失した場合は再発行手数料1600円がかかります)。明確な日数の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13102-dog_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集曜日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集曜日を確認してください)。中央区の収集曜日は京橋・日本橋・月島の地域ごと、町丁目ごとに決められており、中央区公式『あなたの町のごみ・資源収集曜日』ページでご確認ください。本サービスは中央区の収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13102-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch8 — provenance integrity & scope safety > 13103: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または外国から港区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13103-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。ただし港区の公式ページでは継続利用の手続きの期限が未確認のため、期限は窓口へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "港区の公式ページで確認できたのは『新しい住所に住み始めた日から14日以内かつ転出予定日から30日以内に転入先区市町村で転入手続きをしてください。手続きが遅れるとマイナンバーカードが失効します』までです。**継続利用の手続きそのものをいつまでに行わなければカードが失効するのか**は、港区の公式ページでは確認できませんでした(未確認)。継続利用の期限は各総合支所区民課窓口サービス係へご確認ください。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13103-my_number-001",
        "src-13103-my_number-002",
        "src-13103-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、港区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13103-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金(第1号被保険者)の加入・種別変更等の届出に関する案内です。国内転入に伴う届出の要否は港区公式ページに記載がないため、窓口または年金事務所へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "港区の『国民年金の概要』ページで届出が必要とされているのは、退職して厚生年金をやめたとき・配偶者の扶養を外れたとき・外国から転入したときであり、国内の区市町村間の転入に伴う住所変更の届出およびその期限の記載がありません。転入に伴う届出の要否は国保年金課国民年金係または港年金事務所へご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13103-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校生年代までの児童を養育している世帯が対象です。港区に転入した場合は新たに申請が必要です。",
      "applicable": "applicable",
      "dueDescription": "出生、転入日(前住地の転出予定日)の翌日から15日以内に申請してください。申請が遅れると遅れた分の手当が受給できません。15日目が閉庁日の場合は翌開庁日までに申請してください。起算日は前住所地での転出予定日のため、引越し日からは算定できません。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13103-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "港区内に住所があり健康保険に加入している、18歳到達後最初の3月31日までの子どもを養育している方が対象です。",
      "applicable": "applicable",
      "dueDescription": "出生・転入日から15日以内に申請した場合は、出生・転入日から資格が発生します(15日以内であれば申請が翌月になっても出生・転入日に遡って助成が受けられます)。申請は子ども給付係への郵送、各総合支所区民課保健福祉係への持参、マイナポータルによる電子申請のいずれかです。なおこのページには児童手当のような『転入日=前住地の転出予定日』という定義がないため、引越し日からの期限は算定していません。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13103-child_medical-001",
        "src-13103-child_medical-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が港区へ転入する場合に必要な、区立小・中学校への転入学手続きです。港区で交付される書類の名称は公式ページに記載がないため設定していません(記載のない名称を推測で補うことはしません)。",
      "applicable": "applicable",
      "dueDescription": "各総合支所区民課・台場分室で転入手続きを行い、以前在籍していた学校から渡された『在学証明書』と『教科用図書給与証明書』を指定した学校に持参してください。港区は学校選択希望制を実施しており、転入学時に学校選択を希望する場合は選択希望できない学校・学年があるため学務課へお問い合わせください。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13103-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、港区の保育園等の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "港区に転入予定の方は、現在お住まいの自治体を通じて申込手続きを行ってください(申込を受けた自治体が港区と入園に向けた協議を行います)。港区の締切日までに港区へ届くよう、申し込み期限に余裕を持って8開庁日前までにお申し込みください。転入先の住所が確認できる書類(売買契約書・賃貸契約書等)の提出と、入園する月の前月末日までの転入・住民登録が条件です。締切日は入園希望月・年度により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13103-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省データベースへの登録状況が未確認のため、届出先(港区の各総合支所区民課保健福祉係 または 環境省の『犬と猫のマイクロチップ情報登録』サイト)が確定できません。登録状況をご確認ください(環境省データベースで変更登録を行えば区窓口での申請は不要です)。",
      "applicable": "needs_confirmation",
      "dueDescription": "他の区市町村から港区に転入したときは、前住所地の鑑札を持参して区窓口(各総合支所区民課保健福祉係)で転入の手続きをしてください。明確な日数の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13103-dog_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集曜日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集曜日を確認してください)。港区は集積所の所在地ごとに収集曜日カレンダーをPDFで公開しています。指定の曜日の午前8時まで(一部の繁華街地域などは午前7時30分まで)に出してください。年末年始と日曜日を除き、土曜日・祝祭日も収集を行っています。本サービスは港区の収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13103-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch8 — provenance integrity & scope safety > 13105: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または外国から文京区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13105-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。",
      "applicable": "applicable",
      "dueDescription": "引越し日(文京区の新住所に住み始めた日)から14日以内に必ず転入届を行ってください。14日以内に手続きを行わなかった場合、カードは失効します。また転入届を14日以内に出していても、転入届出から90日以内にカードの継続利用手続きを行わない場合はカードが失効します。なおマイナンバーカードの現在の有効期限を超えると上記期間内かどうかを問わず失効し、再発行手数料は有料になります。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13105-my_number-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、文京区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13105-national_health_insurance-001",
        "src-13105-national_health_insurance-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金(第1号被保険者)の加入・種別変更等の届出に関する案内です。国内転入に伴う届出の要否は文京区公式ページに記載がないため、窓口または年金事務所へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "文京区の『国民年金の届出・申請方法』ページには電子申請(マイナポータル)・窓口・郵送の各チャネルで扱う手続きが列挙されていますが、国内の区市町村間の転入に伴う住所変更の届出およびその期限の記載がありません。転入に伴う届出の要否は国保年金課国民年金係または文京年金事務所へご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13105-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校修了前(18歳に到達した日以降最初の3月31日まで)の児童を養育している世帯が対象です。文京区に転入した場合は新たに認定請求が必要です。",
      "applicable": "applicable",
      "dueDescription": "手当は申請した翌月分から支給対象となります。出生・転出予定日等の事由発生日の翌日から15日以内に申請すれば、月をまたがっていても出生・転出予定日等の翌月分から支給されます。起算日は前住所地での転出予定日のため、引越し日からは算定できません。添付書類が揃っていなくても受付可能なので早めに手続きしてください。マイナポータルによる児童手当認定請求の電子申請も可能です。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13105-child_benefits-002",
        "src-13105-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "文京区内に住所があり健康保険に加入している、18歳到達後最初の3月31日までの子どもを養育している方が対象です。",
      "applicable": "applicable",
      "dueDescription": "受給資格の開始日から3ヶ月を経過した後に交付申請をされた場合は、受け付けた月の1日から助成対象となります(3ヶ月以内の申請であれば資格開始日に遡って助成されます)。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13105-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が文京区へ転入する場合に必要な、区立小・中学校への転入学手続きです。文京区で交付される書類の名称は公式ページに記載がないため設定していません(記載のない名称を推測で補うことはしません)。",
      "applicable": "applicable",
      "dueDescription": "住所等の詳細が決まったら学務課学事係へ事前相談(任意)をしたうえで、戸籍住民課で転入届を行い、在籍していた学校が交付した『在学証明書』と『教科書給与証明書』を持参して学務課学事係で入学・転学手続きを行います。その後、就学予定校での学校面談を経て初回登校日が決まります。手続きの日から登校開始まで通常数日から1週間程度かかります。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13105-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、文京区の認可保育所等の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "入所月の1日までに文京区に転入できる場合(または海外在住の場合)は文京区へ直接お申し込みください(電子申請が推奨されています)。入所月の1日までに転入できない場合または転入予定がない場合は、現在お住まいの市区町村を通じてお申し込みください(この場合は申込める保育施設が制限され、調整指数『区民』の対象外になります)。『転入に関する確認書』と賃貸借契約書・売買契約書の提出が必要です。締切日は入園希望月・年度により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13105-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省の指定登録機関への登録状況が未確認のため、届出先(文京保健所 または 環境省の指定登録機関である公益社団法人日本獣医師会の専用サイト)が確定できません。登録状況をご確認ください(指定登録機関への登録がある場合、変更手続きは保健所の窓口では行えません)。",
      "applicable": "needs_confirmation",
      "dueDescription": "他自治体から文京区への転居(犬を伴う)の場合は、文京保健所に鑑札を持参のうえ変更の手続きを行ってください。無償で文京区発行の鑑札と交換します。明確な日数の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13105-dog_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集日を確認してください)。必ず収集日の朝8時までに集積所にお出しください。文京区の収集日は町名・丁目ごとに可燃(週2回)・不燃(月2回)・資源(週1回)・プラスチック(週1回)が決められており、文京区公式『ごみと資源の収集日』ページでご確認ください。本サービスは文京区の収集日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13105-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch8 — provenance integrity & scope safety > 13106: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または外国から台東区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13106-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。ただし台東区の公式ページでは継続利用の手続きの期限が未確認のため、期限は窓口へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "台東区の公式ページで確認できたのは『マイナンバーカードの継続利用(転入前の市区町村で発行されたカードを引き続き使用できるようにすること)は日曜開庁日(第2日曜日)も可能で、継続利用には該当カードの持参と暗証番号の入力による照合が必要』という手続方法までです。**継続利用の手続きそのものをいつまでに行わなければカードが失効するのか**は、台東区の公式ページでは確認できませんでした(未確認)。継続利用の期限は戸籍住民サービス課へご確認ください。なお転入届自体の期限は住み始めてから14日以内です。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13106-resident_registration-001",
        "src-13106-my_number-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、台東区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13106-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金(第1号被保険者)の加入・種別変更等の届出に関する案内です。国内転入に伴う届出の要否は台東区公式ページに記載がないため、窓口または年金事務所へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "台東区の『国民年金の手続き』ページで届出が必要とされているのは、会社等を辞めて国民年金に加入するとき・配偶者扶養を外れたとき・海外から転入するとき等であり、国内の区市町村間の転入に伴う住所変更の届出およびその期限の記載がありません。転入に伴う届出の要否は区民部国民年金係(区役所3階1番窓口)または上野年金事務所へご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13106-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校生年代までの児童を養育している世帯が対象です。台東区に転入した場合は新たに申請が必要です。",
      "applicable": "applicable",
      "dueDescription": "手当は申請をした月の翌月分から支給されます。ただし月の後半に出生・転入した場合、その日の翌日から数えて15日以内の申請であれば事由の発生した月に申請があったものとして扱われます。申請が遅れた場合、遡っての支給はできません。なおこのページには『転入日』が前住所地の転出予定日を指すのか実際の引越し日を指すのかの定義がないため、引越し日からの期限は算定していません。起算日は子育て・若者支援課へご確認ください。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13106-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "台東区内に住所があり健康保険に加入している子どもを養育している方が対象です。",
      "applicable": "applicable",
      "dueDescription": "申請日が出生日または転入日から3ヶ月以上経過している場合は、助成は申請月の1日から開始します(3ヶ月以内の申請であれば出生日・転入日に遡ります)。医療証の有効期限は毎年9月30日です。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13106-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が台東区へ転入する場合に必要な、区立小・中学校への転入学手続きです。台東区で交付される書類の名称は公式ページに記載がないため設定していません(記載のない名称を推測で補うことはしません)。",
      "applicable": "applicable",
      "dueDescription": "学務課学事係への事前相談(任意)のうえ、戸籍住民サービス課等で転入・転居手続きを行い、学務課学事係で入学・転学手続き(住民票の住所に基づく学校の指定・必要書類の記入・入学前面談の日程調整)を行います。その後、学校での入学前面談を経て初回登校日が決まります。入学・転学手続きの日から登校開始まで通常数日から1週間程度かかります。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13106-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、台東区の認可保育園等の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "台東区外在住の方が台東区の保育園に入園するには、申込年度に台東区へ転入予定であること等の条件に該当する必要があります。不動産賃貸・売買契約書の写し(転入予定の住所・引き渡し日・契約者の記載が確認できるもの)の提出が必要で、期限までに転入がなかった場合は内定していても内定取消しになります。申込受付期間は一次調整・二次調整で異なり、郵送・電子申請の締切は窓口申請より早く設定されています。年度・入園希望月により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13106-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省データベースへの登録状況が未確認のため、届出先(台東保健所 または 環境省の『犬と猫のマイクロチップ情報登録』サイト)が確定できません。登録状況をご確認ください(環境省サイトで届出を行う場合、保健所への届出は不要です)。",
      "applicable": "needs_confirmation",
      "dueDescription": "台東区へ引っ越して来たときは、元の住所地で交付されていた『鑑札』を持参して台東保健所へ『飼い犬の登録事項変更届』を提出してください。鑑札は無料で交換します(紛失している場合は再交付手数料1600円がかかります)。この届出は郵送では受付されず必ず窓口へお越しいただく必要があります。明確な日数の期限はこのページには記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13106-dog_registration-001",
        "src-13106-dog_registration-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集曜日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集曜日を確認してください)。台東区の収集曜日は町丁名の頭文字ごとに4つのページに分かれて公開されています。台東区公式『ごみ収集曜日一覧』ページでご確認ください。本サービスは台東区の収集曜日データを保持していません。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13106-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;

exports[`Batch8 — provenance integrity & scope safety > 13107: 決定論 — 同一入力で同一結果 + スナップショット(回帰ガード) 1`] = `
{
  "outcomes": [
    {
      "applicabilityReason": "他の区市町村または外国から墨田区に転入したすべての方に必要な届出です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "urgent",
      "procedureId": "procedure_resident_registration",
      "sourceIds": [
        "src-13107-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "マイナンバーカードをお持ちの方は、転入に伴う継続利用の手続きが必要です。",
      "applicable": "applicable",
      "dueDescription": "転入届の特例により手続をされた方は、転入届出日から90日以内にマイナンバーカードまたは住基カードを引っ越し先の役所にお持ちになり、暗証番号を入力することで引っ越し先でも引き続きご利用いただけます。転入届自体は引っ越し後14日以内に行う必要があります。",
      "priority": "high",
      "procedureId": "procedure_mynumber_continued_use",
      "sourceIds": [
        "src-13107-my_number-001",
        "src-13107-resident_registration-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "職場の健康保険などに加入していない方は、墨田区の国民健康保険への加入の届出が必要です。",
      "applicable": "applicable",
      "dueDate": "2026-08-15",
      "priority": "high",
      "procedureId": "procedure_national_health_insurance",
      "sourceIds": [
        "src-13107-national_health_insurance-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "国民年金(第1号被保険者)の加入・種別変更等の届出に関する案内です。国内転入に伴う届出の要否は墨田区公式ページに記載がないため、窓口または年金事務所へご確認ください。",
      "applicable": "applicable",
      "dueDescription": "墨田区の『国民年金 加入・変更等の届け出』ページで届け出が必要とされているのは、20歳になって加入のお知らせが届かないとき・会社等を退職したとき・扶養されなくなったときであり、国内の区市町村間の転入に伴う住所変更の届出およびその期限の記載がありません。転入に伴う届出の要否は国保年金課国民年金係または墨田年金事務所へご確認ください。",
      "priority": "normal",
      "procedureId": "procedure_national_pension_address",
      "sourceIds": [
        "src-13107-national_pension-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "高校生年代までの児童を養育している世帯が対象です。墨田区に転入した場合は新たに申請が必要です。",
      "applicable": "applicable",
      "dueDescription": "手当は原則として申請の翌月分から受給資格が発生します。例外として、月末に出生・転入された方は出生日や転入日の翌日から数えて15日以内に申請をすれば、当該出生日や転入日の翌月分から受給資格が発生します。墨田区はこの『転入日』を『前住所地で転出手続をした際の転出予定日』と明記しているため、引越し日からは算定できません。申請が遅れた場合、遡っての支給はできません。必要書類が揃っていなくても申請できます。",
      "priority": "high",
      "procedureId": "procedure_child_allowance",
      "sourceIds": [
        "src-13107-child_benefits-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "墨田区内に住所があり健康保険に加入している子どもを養育している方が対象です。",
      "applicable": "applicable",
      "dueDescription": "出生または転入の場合は、出生(転入)日の翌日から15日以内に申請すると、出生(転入)日から有効の医療証が交付されます。15日を過ぎると出生(転入)日に資格が遡れない等の不利益を受ける場合があります。なおこのページには児童手当のような『転入日=前住所地の転出予定日』という定義がないため、引越し日からの期限は算定していません。",
      "priority": "high",
      "procedureId": "procedure_child_medical",
      "sourceIds": [
        "src-13107-child_medical-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "小・中学生(義務教育の学齢)のお子さまがいる世帯が墨田区へ転入する場合に必要な、区立小・中学校への転入学手続きです。墨田区で交付される書類の名称は公式ページに記載がないため設定していません(記載のない名称を推測で補うことはしません)。",
      "applicable": "applicable",
      "dueDescription": "転入先の住所・転入日等が決まったら、墨田区教育委員会の『転入学児童・生徒情報入力フォーム』からお子さまの情報を入力してください。確認のうえ学務課から転学手続きが案内されます(入力内容は翌日朝までに確認されます)。また最終登校日までに在籍校から『在学証明書』『教科書給与証明書』の発行を受けてください。日数固定の期限はこのページには記載がありません。",
      "priority": "high",
      "procedureId": "procedure_school_transfer",
      "sourceIds": [
        "src-13107-school_transfer-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "保育を必要とする未就学のお子さまがいる世帯で、墨田区の認可保育施設の利用を希望する方(区外から申し込む方)向けの案内です。",
      "applicable": "applicable",
      "dueDescription": "転入予定での申込みは、入所希望月の前月末日までに墨田区へ転入することが条件です。転入することがわかる書類(賃貸借契約書・売買契約書等の写し)と区指定様式の『転入に関する誓約書』等の添付が必要です。転入後は必ず入所希望月の前月末日までに子ども施設課入園係へ申込み手続きを行ってください。締切日は入園希望月・年度により異なるため日数固定の期限は設定していません。",
      "priority": "normal",
      "procedureId": "procedure_childcare_application",
      "sourceIds": [
        "src-13107-childcare-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "犬のマイクロチップの装着・環境省データベースへの登録状況が未確認のため、届出先(墨田区生活衛生課 または 環境省の『犬と猫のマイクロチップ情報登録』サイト)が確定できません。登録状況をご確認ください(環境省サイトで情報の変更登録を行えば墨田区への手続きは原則不要です)。なお墨田区は『変更があったときは30日以内』と期限を明記しているため、届出先が確定していなくても期限は表示しています。",
      "applicable": "needs_confirmation",
      "dueDate": "2026-08-31",
      "priority": "normal",
      "procedureId": "procedure_dog_registration_transfer",
      "sourceIds": [
        "src-13107-dog_registration-001",
        "src-13107-dog_registration-002",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "転入したすべての方に、生活開始にあたってごみ・資源の分け方と収集曜日の確認をおすすめします。",
      "applicable": "applicable",
      "dueDescription": "生活開始まで(引越し後すぐに、お住まいの地域の収集曜日を確認してください)。墨田区は地域ごとに資源・ごみの収集曜日が決められており、決められた曜日の朝8時までに出してください。令和8年度版『資源とごみの収集カレンダー』は墨田区公式ページでご確認ください。本サービスは墨田区の収集曜日データを保持していません(分別方法の辞書データのみ整備済みです)。",
      "priority": "normal",
      "procedureId": "procedure_waste_check",
      "sourceIds": [
        "src-13107-waste_guide-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "水道は住まいを移るすべての方に必要なライフラインの手続きです(区の手続きではなく東京都水道局への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "東京都水道局は「次のお手続きについては、3〜4日前までに必ずお手続きください」と案内しています(使用開始申込み・使用中止届のいずれも)。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。",
      "priority": "normal",
      "procedureId": "procedure_water_supply",
      "sourceIds": [
        "src-13000-water_supply-001",
        "src-13000-sewerage-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "旧住所あての郵便物等を新住所へ転送してもらうための、住所が変わるすべての方向けの手続きです(区の手続きではなく日本郵便への手続きです)。",
      "applicable": "applicable",
      "dueDescription": "日本郵便は「転居届を提出されてから登録までに3〜7営業日を要しますので、転居される際には、お早めに転居届を提出してください」と案内しています。引越し日から起算した「◯日以内」という日数の期限は出典の公式ページに記載がありません。転送期間は届出日から1年間です(転送開始希望日からではありません)。",
      "priority": "normal",
      "procedureId": "procedure_postal_forwarding",
      "sourceIds": [
        "src-00000-postal_forwarding-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "電気・ガスは引越しに伴い契約先の民間事業者への手続きが必要になるライフラインです(区の手続きではありません)。",
      "applicable": "applicable",
      "dueDescription": "出典である国(デジタル庁)の公式ページには、電気・ガスの手続きの期限に関する記載がありません。受付の締切や必要な連絡時期は契約先の事業者ごとに異なるため、契約先へご確認ください(要確認)。",
      "priority": "normal",
      "procedureId": "procedure_utilities_contact",
      "sourceIds": [
        "src-00000-utilities_contact-001",
      ],
      "warnings": [],
    },
    {
      "applicabilityReason": "車・バイク等の追加案内が必要と回答された方向けの、運転免許証の住所変更(記載事項変更)の手続きです(区の手続きではなく警視庁への手続きです)。",
      "applicable": "not_applicable",
      "dueDescription": "警視庁の当該ページには「◯日以内」という日数の期限の記載がありません(要確認)。転入届で住民票の住所が変わったあとに手続きしてください。",
      "priority": "normal",
      "procedureId": "procedure_driver_license_change",
      "sourceIds": [
        "src-13000-driver_license-001",
      ],
      "warnings": [],
    },
  ],
  "ruleVersion": "2026-08-07.1",
}
`;
